# diff-doc-rs

./: .gitignore  Cargo.toml  README.md
c/: Makefile  build_test.bat  build_test.ps1  diff.pb-c.c  diff.pb-c.h  diff_apply.c  diff_apply.h  mismatches.pb-c.c  mismatches.pb-c.h  test_diff_apply.c
proto/: diff.proto  diff_doc.proto
src/: diff.rs  generic.rs  jaml_wrapper.rs  json.rs  json_wrapper.rs  lib.rs  main.rs  map_processor.rs  patch.rs  patch_wrapper.rs  txt.rs  txt_impl.rs  txt_wrapper.rs  vec_processor.rs  xml_wrapper.rs
src/dd/: enums.rs  mismatch.rs  mod.rs  process.rs  sort.rs
tests/: integration_test.rs
tests/diff/: mod.rs
tests/json/: mod.rs
tests/json/case1/: a.json  b.json  base.json  result.json
tests/json/case2/: a.json  b.json  base.json  result.json
tests/json/case3/: a.json  b.json  base.json  result.json
tests/patch_diff/: mod.rs
tests/txt/: mod.rs
tests/txt/case1/: a.txt  b.txt  base.txt  result.txt
tests/txt/case2/: a.txt  b.txt  base.txt  result.txt
tests/txt/case3/: a.txt  b.txt  base.txt  result.txt
