
[package]
name = "diff_doc"
version = "0.6.0"
edition = "2024"


[dependencies]

# plain text diff
diffy= { version = "0.4", optional = true }

serde_json = { version = "1.0", features = ["arbitrary_precision"] }

serde = { version = "1.0", features = ["derive", "serde_derive", "std"] }
serde-xml-rs = "*"

serde_yaml = "0.9"
toml = "0.8"


[features]
default = []
patch = ["dep:diffy"]
