
[package]
name = "diff_doc"
version = "0.6.1"
edition = "2024"
description = "A document diffing library supporting multiple formats (JSON, YAML, XML, TOML)."
license = "MIT"
repository = "https://github.com/vkrinitsyn/diff-doc-rs"
authors = ["Vladimir Krinitsyn"]


[dependencies]

# plain text diff
diffy= { version = "0.4", optional = true }

serde_json = { version = "1.0", features = ["arbitrary_precision"] }

serde = { version = "1.0", features = ["derive", "serde_derive", "std"] }
serde-xml-rs = "^0.8"

serde_yaml = "0.9"
toml = "^0.9"


[features]
default = []
patch = ["dep:diffy"]
verbose = [] # exta debug messages
